--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.72.0",
     "scss": "^0.2.4",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
